docs: SKILL.mdの前提条件にjqを追加
Closes #50

--- a/.pi-prompt.md
+++ b/.pi-prompt.md
@@ -1,50 +1,51 @@
-Implement GitHub Issue #41
+Implement GitHub Issue #50
 
 ## Title
-enhancement: log.shを全スクリプトで活用
+docs: SKILL.mdの前提条件にjqを追加
 
 ## Description
 ## 概要
 
-`lib/log.sh` が実装されているが、ほとんどのスクリプトで使用されていない。
+SKILL.mdの前提条件に`jq`が記載されていない。README.mdには追加済み。
 
 ## 現状
 
-log.shを使用しているファイル:
-- ✅ scripts/run.sh
+**SKILL.md:**
+```markdown
+## 前提条件
 
-log.shを使用していないファイル:
-- ❌ scripts/list.sh
-- ❌ scripts/status.sh
-- ❌ scripts/attach.sh
-- ❌ scripts/stop.sh
-- ❌ scripts/cleanup.sh
-- ❌ lib/github.sh
-- ❌ lib/worktree.sh
-- ❌ lib/tmux.sh
+- \`gh\` (GitHub CLI、認証済み)
+- \`tmux\`
+- \`pi\`
+```
+
+**README.md (正しい):**
+```markdown
+# jq (JSON処理)
+which jq
+```
 
 ## 修正内容
 
-全スクリプトで:
-1. `source lib/log.sh`
-2. `echo "Error: ..."` → `log_error "..."`
-3. `echo "Warning: ..."` → `log_warn "..."`
-4. デバッグ情報には `log_debug`
+SKILL.mdの前提条件に`jq`を追加：
 
-## 期待する効果
+```markdown
+## 前提条件
 
-- 一貫したログ出力形式
-- `LOG_LEVEL=DEBUG` でデバッグ情報表示
-- カラー出力によるエラーの視認性向上
+- \`gh\` (GitHub CLI、認証済み)
+- \`tmux\`
+- \`pi\`
+- \`jq\` (JSON処理)
+```
 
 ## 優先度
-P1 (Medium)
+P0 (Critical)
 
 ---
 
 ## Instructions
 
-You are implementing GitHub Issue #41 in an isolated worktree.
+You are implementing GitHub Issue #50 in an isolated worktree.
 
 ### Step 1: Understand the Issue
 - Read the issue description carefully
@@ -64,13 +65,13 @@ You are implementing GitHub Issue #41 in an isolated worktree.
 git add -A
 git commit -m "<type>: <description>
 
-Closes #41"
-git push -u origin feature/issue-41-enhancement-log-sh
+Closes #50"
+git push -u origin feature/issue-50-docs-skill-md-jq
 ```
 
 ### Step 5: Create & Merge PR
 ```bash
-gh pr create --title "<type>: <short description>" --body "Closes #41"
+gh pr create --title "<type>: <short description>" --body "Closes #50"
 gh pr merge --merge --delete-branch
 ```
 
