--- a/.pi-prompt.md
+++ b/.pi-prompt.md
@@ -1,50 +1,51 @@
-Implement GitHub Issue #41
+Implement GitHub Issue #51
 
 ## Title
-enhancement: log.shを全スクリプトで活用
+docs: ディレクトリ構造にlib/log.shを追加
 
 ## Description
 ## 概要
 
-`lib/log.sh` が実装されているが、ほとんどのスクリプトで使用されていない。
+AGENTS.mdとREADME.mdのディレクトリ構造に`lib/log.sh`が記載されていない。
 
 ## 現状
 
-log.shを使用しているファイル:
-- ✅ scripts/run.sh
+**ドキュメントの記載:**
+```
+├── lib/
+│   ├── config.sh
+│   ├── github.sh
+│   ├── worktree.sh
+│   └── tmux.sh
+```
 
-log.shを使用していないファイル:
-- ❌ scripts/list.sh
-- ❌ scripts/status.sh
-- ❌ scripts/attach.sh
-- ❌ scripts/stop.sh
-- ❌ scripts/cleanup.sh
-- ❌ lib/github.sh
-- ❌ lib/worktree.sh
-- ❌ lib/tmux.sh
+**実際のファイル:**
+```bash
+$ ls lib/
+config.sh  github.sh  log.sh  tmux.sh  worktree.sh
+```
 
 ## 修正内容
 
-全スクリプトで:
-1. `source lib/log.sh`
-2. `echo "Error: ..."` → `log_error "..."`
-3. `echo "Warning: ..."` → `log_warn "..."`
-4. デバッグ情報には `log_debug`
+AGENTS.mdとREADME.mdのディレクトリ構造を更新：
 
-## 期待する効果
-
-- 一貫したログ出力形式
-- `LOG_LEVEL=DEBUG` でデバッグ情報表示
-- カラー出力によるエラーの視認性向上
+```
+├── lib/
+│   ├── config.sh
+│   ├── github.sh
+│   ├── log.sh           # 追加
+│   ├── tmux.sh
+│   └── worktree.sh
+```
 
 ## 優先度
-P1 (Medium)
+P0 (Critical)
 
 ---
 
 ## Instructions
 
-You are implementing GitHub Issue #41 in an isolated worktree.
+You are implementing GitHub Issue #51 in an isolated worktree.
 
 ### Step 1: Understand the Issue
 - Read the issue description carefully
@@ -64,13 +65,13 @@ You are implementing GitHub Issue #41 in an isolated worktree.
 git add -A
 git commit -m "<type>: <description>
 
-Closes #41"
-git push -u origin feature/issue-41-enhancement-log-sh
+Closes #51"
+git push -u origin feature/issue-51-docs-lib-log-sh
 ```
 
 ### Step 5: Create & Merge PR
 ```bash
-gh pr create --title "<type>: <short description>" --body "Closes #41"
+gh pr create --title "<type>: <short description>" --body "Closes #51"
 gh pr merge --merge --delete-branch
 ```
 
