--- a/.pi-skills-update.md
+++ b/.pi-skills-update.md
@@ -75,3 +75,52 @@ The following skill scripts in `.pi/skills/*/scripts/*.sh` have been updated:
 
 - Composer Workflow PR: https://github.com/takemo101/compose-workflow/pull/1
 - Commit: 8ae04c221e9b93fc838082af47682e6e856ee1c9
+
+## Orphaned Test Files Removal - Issue #700
+
+### Summary
+
+Removed orphaned test files in `test/skills/` directory that tested external skill scripts managed in a separate repository.
+
+### Background
+
+The `test/skills/` directory contained test files for scripts located in `.pi/skills/`, but these scripts are not part of the `pi-issue-runner` project. They are maintained in the external repository `takemo101/compose-workflow`.
+
+All 141 test cases were in a skipped state because the target scripts don't exist in this project, making these test files orphaned and unnecessary.
+
+### Changes Made
+
+Removed the following test directories (141 total test cases):
+
+1. `test/skills/ci-workflow/` (11 tests)
+2. `test/skills/create-worktree/` (12 tests)
+3. `test/skills/delete-environment/` (10 tests)
+4. `test/skills/github-graphql-api/` (14 tests)
+5. `test/skills/github-issue-dependency/` (12 tests)
+6. `test/skills/github-issue-state-management/` (15 tests)
+7. `test/skills/pr-and-cleanup/` (14 tests)
+8. `test/skills/pr-merge-workflow/` (16 tests)
+9. `test/skills/release-workflow/` (17 tests)
+10. `test/skills/sanitizer/` (20 tests)
+
+The empty `test/skills/` directory was also removed.
+
+### Rationale
+
+- **Project Scope**: These skills are external to `pi-issue-runner` and should be tested in their own repository
+- **No Functionality Loss**: All tests were already skipping; no actual functionality was tested
+- **Cleaner Codebase**: Removing orphaned files reduces maintenance overhead and confusion
+- **Faster Test Execution**: Eliminating unnecessary test files improves CI/CD performance
+
+### External Skill Testing
+
+These skill scripts are properly tested in their source repository:
+- **Repository**: takemo101/compose-workflow
+- **Test Location**: Tests are maintained alongside the actual scripts
+
+### Impact
+
+- ✅ Test suite is now focused on `pi-issue-runner` core functionality only
+- ✅ All remaining tests pass successfully
+- ✅ No breaking changes to existing functionality
+- ✅ Improved test execution speed
